--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build-bundle": "vue-cli-service build --target lib --name vuex-stores ./src/main.js",
-    "test:unit": "vue-cli-service test:unit --include './tests/unit/setup.js'",
+    "test": "vue-cli-service test:unit --include './tests/unit/setup.js'",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
